fixed banner spacing

--- a/ateneo_trade/shop/static/shop/css/main.css
+++ b/ateneo_trade/shop/static/shop/css/main.css
@@ -18,7 +18,7 @@ body {
 
 .banner-title {
 	padding-left: 10em;
-	padding-top: 1em;
+	padding-top: 2em;
 	padding-bottom: 0.9em;
 	background-color: #0084FF;
 	color: white;
